Unit conversion functionality completely working excluding currency conversion -modify script.js  - modify 'convert' function to handle non numeric string  - modify 'convert' function to update conversion result visible on screen everytime    the function is called  - implement switch-unit button functionality  - modify 'change' eventListener of 'quantitySelector' and 'unit-selectors' to    call 'convert' functions on every change  - add event listerner to input field to call 'convert' function    every time input value is changed for real time conversion of updation  - modify conversionTable object for spelling corrections and addition of    ommited units -modify index.html  - spelling correction of unit options values of unit selectors -modify style.js  - add flex-wrap: wrap; property to 'converter-container' class

--- a/style.css
+++ b/style.css
@@ -149,6 +149,7 @@ body {
   border-radius: 6px;
   gap: 16px;
   margin-bottom: 12px;
+  flex-wrap: wrap;
 }
 
 .converter-container select {
